--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <main>
-	<h1>Bug-List</h1>
+	<h1>Bug List</h1>
 	<div id="bugWrapper">
 		<div id="bugInput">
 			<form name="BugListForm" action="#">
@@ -47,6 +47,11 @@
 			<button type="button" id="deleteClosed" tabindex="7">Delete
 				closed
 			</button>
+		</div>
+		<div class="row-30">
+			<select name="filterAuthor" size="1" id="filterAuthor" tabindex="8">
+			</select>
+			<button type="button" id="filter" tabindex="9">Filter</button>
 		</div>
 	</div>
 	<hr>
